--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,16 @@
  html{
 
  }
- nav.navegacion{
+ /* nav.navegacion{
     width: 100%;
-    background-color: rgb(195, 228, 177);
+    background-color: rgb(63, 72, 30);
     display:flex;
     justify-items: center space-between;
     align-items: center;
+    align-self:flex-end; */
 
- }
+ /* }
+  */
  .navegacion .logo_container{
      
 }
@@ -33,12 +35,14 @@
     display: inline-block;
     font-weight: bold;
     color: black;
+    position: relative;
  }
 .video .titulo_video{
-    
+   width:30%;
+   
  }
  body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(19, 18, 18, 0.849);
  }
  footer{
     width: 100%;
@@ -89,17 +93,23 @@
 
  /* seccion de productos */
  .titulo_mates{
-   font-size: 3rem;
+   font-size: 5rem;
+   font-size: large bold;
+   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   color: rgb(63, 72, 30);
    display: flex;
    justify-content: center;
    align-items: center;
  }
+ /* Grid para las cards */
  .conteiner_productos{
    width: 100%;
-   padding: 1rem 8%;
+   padding: 2rem ;
    height: 100%;
+   margin-left: 8%;
    display: grid;
-   gap: 1rem;
+   gap: 0.5rem;
    grid-template-columns: repeat(3, 1fr);
  }
 
@@ -107,9 +117,10 @@
 .card{
    width: 50%;
    height: 400px;
-   background-color: #1c351c;
+   background-color: rgb(63, 72, 30);
    border-radius: 5px;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   
    
 }
 .card img{
@@ -133,4 +144,19 @@
    align-items:center;
    font-size: 1rem;
    color: white;
+}
+
+@media (max-width:768px) {
+   .conteiner_productos {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+
+
+
+@media (max-width:475px) {
+   .conteiner_productos {
+       grid-template-columns: repeat(1, 1fr);
+   }
 }
