--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,46 @@
     font-weight: bold;
     color: black;
     position: relative;
+
  }
-.video .titulo_video{
-   width:30%;
-   
- }
+
+/* Fin NAV */
+/* Titulo */
+.titulo {
+text-align: center;
+font-size: 150px; 
+color:rgb(63, 72, 30);
+text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+
+} 
+/* Video */
+ .video {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 80vh;
+}
+.contenedor-video {
+   text-align: center;
+}
+.titulo_video {
+   color: white;
+   font-size: large bold;
+   text-align: center;
+}
+
+.boton_video{
+   border-radius: 4px;
+   font-size: 20px;
+   transition-duration: 0.4s;
+}
+
+.boton_video:hover {
+  background-color: rgb(63, 72, 30); /* Green */
+  color: white;
+}
+
  body{
     background-color: rgba(19, 18, 18, 0.849);
  }
