--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,15 @@ text-align: center;
 font-size: 150px; 
 color:rgb(63, 72, 30);
 text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+box-shadow: 1px 1px 5px rgb(63, 72, 30);
 
 } 
-
+.intro_index {
+   text-align: center;
+   color: white;
+   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   box-shadow: 1px 1px 5px rgb(63, 72, 30);
+}
 /* Instructivo */
 .como_mate { 
    width: 100%;
@@ -65,7 +70,7 @@ box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
 .card-body {
    width: 100%;
    color: white;
-
+   
 }
 
 /* Video */
