--- a/css/style.css
+++ b/css/style.css
@@ -97,20 +97,20 @@ box-shadow: 1px 1px 5px rgb(63, 72, 30);
 }
 
 .boton_video:hover {
-  background-color: rgb(63, 72, 30); /* Green */
+  background-color: rgb(63, 72, 30); 
   color: white;
 }
 
  body{
     background-color: rgba(19, 18, 18, 0.849);
  }
- footer{
+ /* footer{
     width: 100%;
     height: 300px;
     margin: 0;
     padding: auto;
     background-color:rgb(63, 72, 30) ;
- }
+ } */
  .mates {
     border: 1px solid;
     
@@ -150,11 +150,20 @@ box-shadow: 1px 1px 5px rgb(63, 72, 30);
    overflow: auto;
    background-color: rgb(180, 180, 180);
   }
+/* Zona en mantenimento - temporal */
+.zona_container{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 150px;
+   color: white;
+}
 
  /* seccion de productos */
  .titulo_mates{
-   font-size: 5rem;
-   font-size: large bold;
+   
+   font-size:  5rem;
+   text-decoration: solid;
    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
    color: rgb(63, 72, 30);
@@ -205,6 +214,33 @@ box-shadow: 1px 1px 5px rgb(63, 72, 30);
    font-size: 1rem;
    color: white;
 }
+
+.boton_abajo {
+   border-radius: 4px;
+   font-size: 20px;
+   transition-duration: 0.4s;
+
+}
+.boton_abajo:hover {
+   background-color: rgb(63, 72, 30); 
+   color: white;
+ }
+/* Iconos del Footer */
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   background-color:rgb(63, 72, 30) ;
+   padding: 100px 0px;
+   text-decoration: solid;
+   color: white;
+}
+
+
+
+
+
+
 
 @media (max-width:768px) {
    .conteiner_productos {
