--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,14 @@ footer{
   .como_mate {
       grid-template-columns: repeat(1, 1fr);
   }
+  .titulo {
+   text-align: center;
+   font-size: 80px; 
+   color:rgb(63, 72, 30);
+   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   box-shadow: 1px 1px 5px rgb(63, 72, 30);
+
+  }
 }
 
 
@@ -260,6 +268,13 @@ footer{
    }
    .como_mate {
       grid-template-columns: repeat(1, 1fr);
+  }
+  .titulo {
+   text-align: center;
+   font-size: 45px; 
+   color:rgb(63, 72, 30);
+   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+   box-shadow: 1px 1px 5px rgb(63, 72, 30);
   }
 
 }
