--- a/scss/style.scss
+++ b/scss/style.scss
@@ -220,6 +220,12 @@ box-shadow: 1px 1px 5px rgb(63, 72, 30);
    color: white;
 }
 
+.card-text{
+    
+       font-size: 0.80rem; 
+
+
+}
 .boton_abajo {
    border-radius: 4px;
    font-size: 20px;
