--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
- }
+@import './partials/header';
+@import './partials/footer';
+@import './partials/reset';
+@import './partials/queries';
+
  html{
 
  }
@@ -260,63 +257,3 @@ footer{
  }
 
 
-@media (max-width: 1100px) {
-   .conteiner_productos {
-      grid-template-columns: repeat(2, 1fr);
-  }
-  .como_mate {
-      grid-template-columns: repeat(1, 1fr);
-  }
-  .titulo {
-   text-align: center;
-   font-size: 80px; 
-   color:rgb(63, 72, 30);
-   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-   box-shadow: 1px 1px 5px rgb(63, 72, 30);
-
-  }
-  
-
-
-}
-
-@media (max-width:768px) {
-   .conteiner_productos {
-      grid-template-columns: repeat(2, 1fr);
-  }
-  .como_mate {
-      grid-template-columns: repeat(1, 1fr);
-  }
-  .titulo {
-   text-align: center;
-   font-size: 80px; 
-   color:rgb(63, 72, 30);
-   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-   box-shadow: 1px 1px 5px rgb(63, 72, 30);
-
-  }
-  .nuestra_historia{
-   gap: 0;
-   margin-top: 0;
-  }
-}
-
-
-
-
-@media (max-width:475px) {
-   .conteiner_productos {
-       grid-template-columns: repeat(1, 1fr);
-   }
-   .como_mate {
-      grid-template-columns: repeat(1, 1fr);
-  }
-  .titulo {
-   text-align: center;
-   font-size: 55px; 
-   color:rgb(63, 72, 30);
-   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-   box-shadow: 1px 1px 5px rgb(63, 72, 30);
-  }
-
-}
