--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+.logo_container .logo {
+  width: 40px;
+  height: 100%;
+}
+
+.logo_container span {
+  font-size: 2rem;
+  font-weight: 700px;
+}
+
+.navegacion_nav .nav_item {
+  display: inline-block;
+  font-weight: bold;
+  color: black;
+  position: relative;
+}
+
 footer {
   display: flex;
   align-items: center;
@@ -15,23 +32,6 @@ footer {
   list-style: none;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-}
-
-.logo_container .logo {
-  width: 40px;
-  height: 100%;
-}
-
-.logo_container span {
-  font-size: 2rem;
-  font-weight: 700px;
-}
-
-.navegacion_nav .nav_item {
-  display: inline-block;
-  font-weight: bold;
-  color: black;
-  position: relative;
 }
 
 /* Fin NAV */
@@ -175,15 +175,6 @@ body {
 }
 
 /*Fin formulario*/
-.preguntas {
-  border: 1px solid black;
-  justify-items: auto;
-  width: 80%;
-  height: 100px;
-  overflow: auto;
-  background-color: rgb(180, 180, 180);
-}
-
 .texto_yerba {
   border: 1px solid black;
   justify-items: auto;
@@ -193,25 +184,25 @@ body {
   background-color: rgb(180, 180, 180);
 }
 
-/* Zona en mantenimento - temporal */
-.zona_container {
+.imagen-titulo {
+  background-image: url(../img/yerba-suelta.webp);
+  background-size: contain;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 10rem;
+  font-weight: bold;
+  text-decoration: solid;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
   display: flex;
-  align-items: center;
   justify-content: center;
-  font-size: 150px;
-  color: white;
+  align-items: center;
 }
 
 /* seccion de productos */
 .titulo_mates {
   font-size: 5rem;
-  text-decoration: solid;
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
   color: rgb(63, 72, 30);
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Grid para las cards */
@@ -314,12 +305,20 @@ body {
   .como_mate {
     grid-template-columns: repeat(1, 1fr);
   }
-  .titulo {
+  .imagen-titulo {
     text-align: center;
-    font-size: 80px;
-    color: rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
+    background-image: url(../img/yerba-suelta.webp);
+    background-size: contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 10rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media (max-width: 768px) {
@@ -329,12 +328,20 @@ body {
   .como_mate {
     grid-template-columns: repeat(1, 1fr);
   }
-  .titulo {
+  .imagen-titulo {
     text-align: center;
-    font-size: 80px;
-    color: rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
+    background-image: url(../img/yerba-suelta.webp);
+    background-size: contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 6rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .nuestra_historia {
     gap: 0;
@@ -348,12 +355,20 @@ body {
   .como_mate {
     grid-template-columns: repeat(1, 1fr);
   }
-  .titulo {
+  .imagen-titulo {
     text-align: center;
-    font-size: 55px;
-    color: rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
+    background-image: url(../img/yerba-suelta.webp);
+    background-size: contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 4rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
