--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -5,13 +5,20 @@
    .como_mate {
        grid-template-columns: repeat(1, 1fr);
    }
-   .titulo {
+   .imagen-titulo {
     text-align: center;
-    font-size: 80px; 
-    color:rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
- 
+    background-image: url(../img/yerba-suelta.webp);
+    background-size:contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 10rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
    }
    
  
@@ -25,13 +32,20 @@
    .como_mate {
        grid-template-columns: repeat(1, 1fr);
    }
-   .titulo {
+   .imagen-titulo {
     text-align: center;
-    font-size: 80px; 
-    color:rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
- 
+    background-image: url(../img/yerba-suelta.webp);
+    background-size:contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 6rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
    }
    .nuestra_historia{
     gap: 0;
@@ -49,12 +63,20 @@
     .como_mate {
        grid-template-columns: repeat(1, 1fr);
    }
-   .titulo {
+   .imagen-titulo {
     text-align: center;
-    font-size: 55px; 
-    color:rgb(63, 72, 30);
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-    box-shadow: 1px 1px 5px rgb(63, 72, 30);
+    background-image: url(../img/yerba-suelta.webp);
+    background-size:contain;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 4rem;
+    font-weight: bold;
+    text-decoration: solid;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+    display: flex;
+    justify-content: center;
+    align-items: center;
    }
  
  }
