--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,32 +1,14 @@
 @import './partials/header';
 @import './partials/footer';
 @import './partials/reset';
+@import './partials/variables';
+
 
 html{
 
 }
+ 
 
-   .navegacion .logo_container{
-      
-   }
-   
-   .logo_container .logo {
-      width: 40px;
-      height:100% ;
-   }
-   
-   .logo_container span{
-      font-size: 2rem;
-      font-weight: 700px;
-      
-   }
-   .navegacion_nav .nav_item{
-      display: inline-block;
-      font-weight: bold;
-      color: black;
-      position: relative;
-
-   }
    
    /* Fin NAV */
    /* Titulo */
@@ -175,14 +157,7 @@ body{
  
 /*Fin formulario*/
 
-.preguntas {
-   border: 1px solid black;
-   justify-items: auto;
-   width: 80% ;
-   height: 100px;
-   overflow: auto;
-   background-color: rgb(180, 180, 180);
-}
+
 
 .texto_yerba {
    border: 1px solid black;
@@ -192,26 +167,28 @@ body{
    overflow: auto;
    background-color: rgb(180, 180, 180);
 }
-/* Zona en mantenimento - temporal */
-.zona_container{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   font-size: 150px;
-   color: white;
-}
 
+
+.imagen-titulo{
+   background-image: url(../img/yerba-suelta.webp);
+   background-size:contain;
+   background-clip: text;
+   -webkit-background-clip: text;
+   color: transparent;
+   font-size: 10rem;
+   font-weight: bold;
+   text-decoration: solid;
+   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+}
 /* seccion de productos */
 .titulo_mates{
    
    font-size:  5rem;
-   text-decoration: solid;
-   text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-   box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
    color: rgb(63, 72, 30);
-   display: flex;
-   justify-content: center;
-   align-items: center;
 }
 /* Grid para las cards */
 .conteiner_productos{
