--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,13 +274,14 @@ body{
       margin-top: 20px;
       font-style:oblique;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 2rem;
       gap: 5px;
-      color:rgb(63, 72, 30);
-      background-color: beige;
+      color:white;
+      background-color: transparent;
       width: 100% ;
       height:fit-content;
       box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+      
    }
    
    
