--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -20,7 +20,11 @@
     justify-content: center;
     align-items: center;
    }
-   
+   .nuestra_historia{
+    gap: 0;
+    margin-top: 0;
+    font-size: 1.5rem;
+   }
  
  
  }
@@ -50,6 +54,7 @@
    .nuestra_historia{
     gap: 0;
     margin-top: 0;
+    font-size: 1rem;
    }
  }
  
