--- a/css/style.css
+++ b/css/style.css
@@ -36,15 +36,23 @@ footer {
 
 /* Fin NAV */
 /* Titulo */
-.titulo {
-  text-align: center;
-  font-size: 150px;
-  color: rgb(63, 72, 30);
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
-  box-shadow: 1px 1px 5px rgb(63, 72, 30);
+.imagen-titulo {
+  background-image: url(../img/yerba-suelta.webp);
+  background-size: contain;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 10rem;
+  font-weight: bold;
+  text-decoration: solid;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.intro_index {
+.section_home .intro_index {
+  padding: 50px 20px;
   text-align: center;
   color: white;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
@@ -52,23 +60,6 @@ footer {
 }
 
 /* Instructivo */
-.como_mate {
-  width: 100%;
-  display: grid;
-  padding: 2rem;
-  height: 100%;
-  margin-left: 10%;
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.card-body {
-  width: 100%;
-  color: white;
-  padding: 16px;
-}
-
 /* Video */
 .video {
   display: flex;
@@ -92,10 +83,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(19, 18, 18, 0.849);
-}
-
-.mates {
-  border: 1px solid;
 }
 
 /* Formulario  - Contacto */
@@ -184,27 +171,62 @@ body {
   background-color: rgb(180, 180, 180);
 }
 
-.imagen-titulo {
-  background-image: url(../img/yerba-suelta.webp);
-  background-size: contain;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  font-size: 10rem;
-  font-weight: bold;
-  text-decoration: solid;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.74);
+/* Inicio - estilos cards Index- Instructivo*/
+.contenedor-instructivo {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-/* seccion de productos */
-.titulo_mates {
-  font-size: 5rem;
-  color: rgb(63, 72, 30);
+.contenido-card {
+  display: flex;
+  width: 800px;
+  height: auto;
+  background: #fff;
+  padding: 0 20px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
 }
 
+.contenido-card:hover .foto-card {
+  box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
+}
+
+.titulo-instructivo {
+  border-right: 1px solid #ddd;
+  display: block;
+  position: relative;
+  width: 300vh;
+}
+
+.descripcion-instructivo {
+  background-color: rgb(63, 72, 30);
+  border-radius: 5%;
+  border: none;
+  color: #fff;
+  position: relative;
+  text-align: center;
+  justify-content: center;
+}
+
+.descripcion-instructivo p {
+  margin: 20px 30px;
+}
+
+.titulo-instructivo, .descripcion-instructivo {
+  padding: 20px;
+  text-align: center;
+}
+
+.titulo-instructivo .foto-card {
+  box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.06);
+  width: 100%;
+  margin: 40px 0px 10px -15px;
+}
+
+/* Inicio - estlilo de las card - productos / accesorios */
 /* Grid para las cards */
 .conteiner_productos {
   width: 100%;
@@ -216,7 +238,6 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-/* estlilo de las card */
 .card {
   width: 50%;
   height: 400px;
@@ -247,6 +268,12 @@ body {
   align-items: center;
   font-size: 1rem;
   color: white;
+}
+
+.card_container .texto_producto {
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 
 /*botones */
@@ -352,6 +379,29 @@ body {
     gap: 0;
     margin-top: 0;
     font-size: 1rem;
+  }
+  .contenido-card {
+    display: block;
+    width: 800px;
+    background-color: rgb(63, 72, 30);
+  }
+  .contenido-card:hover .foto-card {
+    box-shadow: 1px 1px 8px 8px rgba(8, 8, 5, 0.692);
+  }
+  .titulo-instructivo {
+    width: auto;
+    padding: 20px 20px 5px 20px;
+    border: none;
+    color: white;
+  }
+  .foto-card {
+    margin: 40px 0px 10px -15px;
+  }
+  .descripcion-instructivo {
+    background-color: white;
+    color: black;
+    width: 100%;
+    margin: 0;
   }
 }
 @media (max-width: 475px) {
