--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -56,6 +56,33 @@
     margin-top: 0;
     font-size: 1rem;
    }
+   
+   .contenido-card{
+   display: block;
+   width: 800px;
+   background-color:rgb(63, 72, 30);
+   
+   }
+   .contenido-card:hover .foto-card{
+    box-shadow: 1px 1px 8px 8px rgba(8, 8, 5, 0.692);}
+    
+   .titulo-instructivo{
+    width: auto;
+    padding: 20px 20px 5px 20px;
+    border:none;
+    color: white;
+    
+   }
+   .foto-card{
+    margin: 40px 0px 10px -15px;
+   }
+   .descripcion-instructivo{
+    background-color: white;
+    color: black;
+    width: 100%;
+    margin: 0;
+   }
+
  }
  
  
