--- a/scss/style.scss
+++ b/scss/style.scss
@@ -180,9 +180,66 @@ body{
    overflow: auto;
    background-color: rgb(180, 180, 180);
 }
+/* Inicio - estilos cards Index- Instructivo*/
+.contenedor-instructivo{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   height: 100vh;
+  
+   
+}
+.contenido-card{
+   display: flex;
+   width: 800px;
+   height: auto;
+   background: #fff;
+   padding: 0 20px;
+   border-radius: 2px;
+   box-shadow: 1px 1px 4px 2px rgba(0,0,0,.2);
+   transition: .2s;
+   
+}
+.contenido-card:hover .foto-card{
+   box-shadow: 1px 1px 8px 8px rgba(63, 72, 30, 0.692);
+   
+}
+.titulo-instructivo{
+   border-right: 1px solid #ddd;
+   display: block;
+   position: relative;
+   width: 300vh;
 
+
+}
+.descripcion-instructivo{
+   background-color: rgb(63, 72, 30);
+   border-radius: 5%;
+   border: none;
+   color: #fff;
+   position: relative;
+   text-align: center;
+   justify-content: center;
+   
+}
+.descripcion-instructivo p{
+   margin: 20px 30px;
+}
+.titulo-instructivo, .descripcion-instructivo{
+   padding: 20px;
+   text-align: center;
+}
+.titulo-instructivo .foto-card{
+   box-shadow: 0 0 0 8px rgba(0, 0, 0, .06);
+   width: 100%;
+   margin: 40px 0px 10px -15px;
+
+}
+
+/* Inicio - estlilo de las card - productos / accesorios */
 
 /* Grid para las cards */
+
 .conteiner_productos{
    width: 100%;
    padding: 2rem ;
@@ -193,15 +250,13 @@ body{
    grid-template-columns: repeat(3, 1fr);
 }
 
-/* estlilo de las card - productos / accesorios */
 .card{
    width: 50%;
    height: 400px;
    background-color: rgb(63, 72, 30);
    border-radius: 5px;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-   
-   
+      
 }
 .card img{
       border-radius: 5px 5px 0 0;
@@ -225,6 +280,14 @@ body{
       font-size: 1rem;
       color: white;
    }
+
+   .card_container .texto_producto{
+      display: flex;
+      text-align: center;
+      justify-content: center;
+
+   }
+
    /*botones */
    .boton_abajo {
       border-radius: 4px;
