--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ body {
 /* Inicio - estilos cards Index- Instructivo*/
 .contenedor-instructivo {
   display: flex;
+  flex-direction: column;
+  gap: 5px;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -195,7 +197,6 @@ body {
 }
 
 .titulo-instructivo {
-  border-right: 1px solid #ddd;
   display: block;
   position: relative;
   width: 300vh;
@@ -380,13 +381,18 @@ body {
     margin-top: 0;
     font-size: 1rem;
   }
+  /*estilos card instructivo*/
+  .contenedor-instructivo {
+    height: auto;
+  }
   .contenido-card {
     display: block;
-    width: 800px;
     background-color: rgb(63, 72, 30);
+    width: 500px;
+    height: auto;
   }
   .contenido-card:hover .foto-card {
-    box-shadow: 1px 1px 8px 8px rgba(8, 8, 5, 0.692);
+    box-shadow: 1px 1px 8px 8px rgba(0, 0, 0, 0.692);
   }
   .titulo-instructivo {
     width: auto;
@@ -425,6 +431,34 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  /*estilos card instructivo*/
+  .contenedor-instructivo {
+    height: auto;
+  }
+  .contenido-card {
+    display: block;
+    background-color: rgb(63, 72, 30);
+    width: 400px;
+    height: auto;
+  }
+  .contenido-card:hover .foto-card {
+    box-shadow: 1px 1px 8px 8px rgba(0, 0, 0, 0.692);
+  }
+  .titulo-instructivo {
+    width: auto;
+    padding: 20px 20px 5px 20px;
+    border: none;
+    color: white;
+  }
+  .foto-card {
+    margin: 40px 0px 10px -15px;
+  }
+  .descripcion-instructivo {
+    background-color: white;
+    color: black;
+    width: 100%;
+    margin: 0;
   }
 }
 
