--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,7 +187,7 @@ body{
    gap: 5px;
    align-items: center;
    justify-content: center;
-   height: 100vh;
+   height: 100%;
    
 }
 .contenido-card{
