--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
   gap: 5px;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .contenido-card {
