--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -88,6 +88,9 @@
     margin: 0;
    }
 
+   .encontranos{
+    font-size: 1.5rem;
+   }
  }
  
  
@@ -146,5 +149,7 @@
     width: 100%;
     margin: 0;
    }
-
+   .encontranos{
+    font-size: 1.3rem;
+   }
  }
