--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,19 @@ section {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
 }
 
+/* Inicio estilos - Contacto*/
+.encontranos {
+  color: white;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map {
+  background-color: rgb(63, 72, 30);
+}
+
 @media (max-width: 1100px) {
   .conteiner_productos {
     grid-template-columns: repeat(2, 1fr);
@@ -437,6 +450,9 @@ section {
     width: 100%;
     margin: 0;
   }
+  .encontranos {
+    font-size: 1.5rem;
+  }
 }
 @media (max-width: 475px) {
   .conteiner_productos {
@@ -487,6 +503,9 @@ section {
     color: black;
     width: 100%;
     margin: 0;
+  }
+  .encontranos {
+    font-size: 1.3rem;
   }
 }
 
