--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -8,3 +8,129 @@ footer{
     color: white;
  }
  
+
+ .pie_pagina {
+    padding: 1rem;
+    width: 100%;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+ }
+ .derechos-footer  {
+    font-size: 1rem;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+
+ }
+ .link_item a{
+    color: white;
+ }
+ .link_item:hover a{
+    color: black;
+    font-weight: bold;
+ }
+.pie_pagina .links {
+    width: 1px;
+    margin: 5px;
+    justify-content: space-between;
+    
+
+}
+.pie_pagina ul {
+    color: white;
+    padding: 10px 0;
+    width: 250px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.card-redes{
+    gap: 15px;
+    align-self: end;
+    padding: 2px 5px ;
+    display: flex;
+    justify-content: center;
+}
+.logo {
+    width: 150px;
+    padding: 10px 20px;
+    align-self: center;
+}
+
+
+
+
+
+ /* Iconos de redes sociales*/
+ .card-redes {
+    display: flex;
+    height: 70px;
+    width: 220px;
+  }
+  
+  .card-redes svg {
+    position: absolute;
+    display: flex;
+    width: 60%;
+    height: 100%;
+    font-size: 24px;
+    font-weight: 700;
+    opacity: 1;
+    transition: opacity 0.25s;
+    z-index: 2;
+    cursor: pointer;
+  }
+  
+  .card-redes .social-link1,.card-redes .social-link4 {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    color: whitesmoke;
+    font-size: 24px;
+    text-decoration: none;
+    transition: 0.25s;
+    border-radius: 50px;
+  }
+  
+  .card-redes svg {
+    transform: scale(1);
+  }
+  
+  .card-redes .social-link1:hover {
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    animation: bounce_613 0.4s linear;
+  }
+   
+  .card-redes .social-link4:hover {
+    background-color: #12a50b;
+    animation: bounce_613 0.4s linear;
+  }
+  
+  @keyframes bounce_613 {
+    40% {
+      transform: scale(1.4);
+    }
+  
+    60% {
+      transform: scale(0.8);
+    }
+  
+    80% {
+      transform: scale(1.2);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
+  
