puliendo-estilo-error-404

--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,7 @@ section {
   background-color: rgb(63, 72, 30);
 }
 
+/* pag - error-404 */
 .error-404 {
   display: flex;
   justify-content: center;
