--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,11 @@ section {
   color: white;
 }
 
+.titulo-error-404 .mensaje-error {
+  color: white;
+  justify-content: space-evenly;
+}
+
 @media (max-width: 1100px) {
   .conteiner_productos {
     grid-template-columns: repeat(2, 1fr);
