--- a/scss/style.scss
+++ b/scss/style.scss
@@ -349,8 +349,7 @@ section {
       background-color: rgb(63, 72, 30);
    }
    /* pag - error-404 */
-
-   .error-404 {
+   main{
       display: flex;
       justify-content: center;
       align-items: center;
@@ -358,10 +357,10 @@ section {
       color: white;
 
    }
-   .titulo-error-404 .mensaje-error {
+   .error-404 .titulo-error-404 .mensaje-error {
       color: white;
       justify-content: space-evenly;
-      
+
 
    }
    
